welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:4: error: type mismatch;
 found   : Char('R')
 required: String
	if (M='R') {
              ^BDRBuggle:4: error: type mismatch;
 found   : Unit
 required: Boolean
	if (M='R') {
             ^BDRBuggle:8: error: type mismatch;
 found   : Char('L')
 required: String
	if (M='L') {
              ^BDRBuggle:8: error: type mismatch;
 found   : Unit
 required: Boolean
	if (M='L') {
             ^BDRBuggle:12: error: type mismatch;
 found   : Char('I')
 required: String
	if (M='I') {
              ^BDRBuggle:12: error: type mismatch;
 found   : Unit
 required: Boolean
	if (M='I') {
             ^BDRBuggle:17: error: type mismatch;
 found   : Char('A')
 required: String
	if (M='A') {
              ^BDRBuggle:17: error: type mismatch;
 found   : Unit
 required: Boolean
	if (M='A') {
             ^BDRBuggle:20: error: type mismatch;
 found   : Char('B')
 required: String
	if (M='B') {
              ^BDRBuggle:20: error: type mismatch;
 found   : Unit
 required: Boolean
	if (M='B') {
             ^BDRBuggle:24: error: type mismatch;
 found   : Char('C')
 required: String
	if (M='C') {
              ^BDRBuggle:24: error: type mismatch;
 found   : Unit
 required: Boolean
	if (M='C') {
             ^BDRBuggle:29: error: type mismatch;
 found   : Char('Z')
 required: String
	if (M='Z') {
              ^BDRBuggle:29: error: type mismatch;
 found   : Unit
 required: Boolean
	if (M='Z') {
             ^BDRBuggle:32: error: type mismatch;
 found   : Char('Y')
 required: String
	if (M='Y') {
              ^BDRBuggle:32: error: type mismatch;
 found   : Unit
 required: Boolean
	if (M='Y') {
             ^BDRBuggle:36: error: type mismatch;
 found   : Char('W')
 required: String
	if (M='W') {
              ^BDRBuggle:36: error: type mismatch;
 found   : Unit
 required: Boolean
	if (M='W') {
             ^